big commit, still breaking things...
* synch with rel_2_2. Probably the last non manual synch, as rel_2_2 should not be modified deeply.
* code cleaning (cleaning warnings from perl -w) continued

--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem.tmpl
@@ -76,7 +76,6 @@
 	<input type="hidden" name="mandatory" value="0">
 	<input type="button" value="Modify item" onClick="Check(this.form)" accesskey="w" class="button catalogue">
 	<!-- /TMPL_IF -->
-	</center>
 	</form>
 </div>
 <script LANGUAGE="JavaScript">
@@ -120,7 +119,7 @@ function Check(f) {
 	}
 }
 function Dopop(link,i) {
-	defaultvalue=document.forms[0].field_value[i].value;
+	defaultvalue=document.forms['f'].field_value[i].value;
 	newin=window.open(link+"&result="+defaultvalue,"value builder",'width=500,height=400,toolbar=false,scrollbars=yes');
 }
 function confirm_deletion(bibid,itemnum) {
