--- a/koha-tmpl/intranet-tmpl/default/en/acqui/newbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/newbiblio.tmpl
@@ -170,19 +170,19 @@ function check(f) {
 		</p>
 		<p>
 			<label class="label100">Replacement Cost </label>
-			<input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" onchange="update(this.form)">
+			<input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->">
 		</p>
 		<p>
 			<label class="label100">Budgeted Cost</label>
-			<input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" onchange="update(this.form)">
+			<input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->">
 		</p>
 		<p>
 			<label class="label100">Budgeted GST</label>
-			<input type="text" size="20" name="GST" value="" onchange="update(this.form)">
+			<input type="text" size="20" name="GST" value="">
 		</p>
 		<p>
 			<label class="label100"><b>BUDGETED TOTAL</b></label>
-			<input type="text" size="20" name="total" value="" onchange="update(this.form)">
+			<input type="text" size="20" name="total" value="">
 		</p>
 		<p>
 			<label class="label100">Actual Cost</label>
