--- a/koha-tmpl/intranet-tmpl/default/en/authorities/auth_finder.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/authorities/auth_finder.tmpl
@@ -3,7 +3,7 @@
 
 <h1 class="authority">Authority search</h1>
 
-<form name="f" method="post">
+<form name="f" action="/cgi-bin/koha/authorities/auth_finder.pl" method="post">
 	<input type="hidden" name="op" value="do_search">
 	<input type="hidden" name="type" value="intranet">
 	<input type="hidden" name="nbstatements" value="<!-- TMPL_VAR NAME="nbstatements" -->">
