--- a/koha-tmpl/intranet-tmpl/default/en/authorities/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/authorities/detail.tmpl
@@ -5,9 +5,11 @@
 	<a href="authorities.pl?authid=<!-- TMPL_VAR NAME="authid" -->">
 		<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png">
 	</a>
-	<a href="javascript:confirm_deletion()">
-		<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png">
-	</a>
+	<!-- TMPL_UNLESS name="count" -->
+		<a href="javascript:confirm_deletion()">
+			<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png">
+		</a>
+	<!-- /TMPL_UNLESS -->
 	<a href="javascript:Dopop('detailprint.pl?authid=<!-- TMPL_VAR NAME="authid" -->')" class="button authority">
 		Print
 	</a>
@@ -22,9 +24,6 @@
 		<!-- TMPL_LOOP NAME="subfield" -->
 			<p>
 				<label class="labelsubfield">
-				<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="marc_tag" --><!-- TMPL_VAR NAME="marc_subfield" -->&amp;operator=&#x003D&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
-					<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/filefind.png" height="15">
-				</a>
 				<!-- TMPL_VAR NAME="marc_subfield" -->
 				<!-- TMPL_VAR NAME="marc_lib" --></label>
 				<!-- TMPL_VAR NAME="marc_value" -->
