--- a/koha-tmpl/intranet-tmpl/default/en/bull/statecollection.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bull/statecollection.tmpl
@@ -59,9 +59,9 @@
 						<option value="4">Missing</option>
 					<!-- /TMPL_IF -->
 					<!--TMPL_IF name="status5" -->
-						<option value="5" selected>Not issued</option>
+						<option value="5" selected>Not published</option>
 					<!-- TMPL_ELSE -->
-						<option value="5">Not issued</option>
+						<option value="5">Not published</option>
 					<!-- /TMPL_IF -->
 					<!--TMPL_IF name="status6" -->
 						<option value="6" selected>Delete</option>
