--- a/koha-tmpl/intranet-tmpl/default/en/bull/subscription-renew.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bull/subscription-renew.tmpl
@@ -3,7 +3,7 @@
 
 <h1 class="bull">subscription renewal for <!-- TMPL_VAR name="bibliotitle" --></h1>
 
-<form name="f" method="post">
+<form name="f" action="/cgi-bin/koha/bull/subscription-renew.pl" method="post">
 	<div id="bloc25">
 		<input type="hidden" name="op" value="renew">
 		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
