--- a/koha-tmpl/intranet-tmpl/default/en/includes/common-style.css
+++ b/koha-tmpl/intranet-tmpl/default/en/includes/common-style.css
@@ -53,8 +53,8 @@ label {
 	font-family: Arial;
 	font-size:12px;
 	padding: 2px 5px 2px 5px;
-	margin:5px;
-/* 	margin-bottom:5px; */
+	margin-top:5px;
+	margin-bottom:5px;
 	display:inline;
 	position:static;
 	border : 1px solid black;
@@ -137,6 +137,7 @@ td.numberhilighted {
 #resultlist table td:last-child {
 	border-right : 1px solid Black;
 }
+
 
 h1 {
 	color:#000000;
@@ -275,7 +276,7 @@ a.resultnumber:hover {
 
 a.resultlist {
 	font-weight : bold;
-	display : block;
+/*	display : block;*/
 	padding-left : 5px;
 }
 
