--- a/koha-tmpl/intranet-tmpl/default/en/parameters/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/aqbookfund.tmpl
@@ -49,6 +49,13 @@
 					&nbsp;
 				<!--/TMPL_IF-->
 				</td>
+				<td align="center">
+				<!--TMPL_IF Name="branchcode"-->
+				 	<!--TMPL_VAR Name="branchcode"-->
+				<!--TMPL_ELSE -->
+					&nbsp;
+				<!--/TMPL_IF-->
+				</td>
 				<td>
 					<a href="/cgi-bin/koha/admin/aqbudget.pl?op=add_form&amp;aqbudgetid=<!-- TMPL_VAR NAME="aqbudgetid" -->">
 						<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png" alt="Edit" title="Edit" width="32" hspace="0" vspace="0" border="0">
@@ -149,7 +156,14 @@
 		<label>Name</label><input type="text" name="bookfundname" size="40" maxlength="80" value="<!-- TMPL_VAR NAME="bookfundname" escape=HTML -->">&nbsp;
 	</p>
 	<p>
-		<label>Branch</label><!-- TMPL_VAR NAME="CGIbranch"-->&nbsp;
+		<label>Branch</label>
+			<select name="branch">
+				<option value="">Default</option>
+				<!-- TMPL_LOOP name="branchloop" -->
+					<option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="branchname" --></option>
+				<!-- /TMPL_LOOP -->
+			</select>
+
 		<br/> Select one if budget is branch specific, otherwise, leave it blank.
 	</p>
 	<p>
