--- a/koha-tmpl/intranet-tmpl/default/en/parameters/auth_tag_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/auth_tag_structure.tmpl
@@ -164,12 +164,12 @@
 		<input type="hidden" name="op" value="add_form">
 		<input type="submit" class="button" value="Add Tag" title="Add Tag" alt="Add Tag" >
 		<!-- TMPL_IF NAME="isprevpage" -->
-			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="prevpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->">
+			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="prevpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&authtypecode=<!-- TMPL_VAR name="authtypecode" -->">
 			<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1leftarrow.png" title="previous" alt="previous" border="0">
 			</a>
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="nextpage" -->
-			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="nextpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->">
+			<a href="<!-- TMPL_VAR NAME="script_name" -->?offset=<!-- TMPL_VAR NAME="nextpage" -->&amp;searchfield=<!-- TMPL_VAR NAME="searchfield" -->&authtypecode=<!-- TMPL_VAR name="authtypecode" -->">
 				<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1rightarrow.png" title="next" alt="next" border="0">
 			</a>
 		<!-- /TMPL_IF -->
