--- a/koha-tmpl/intranet-tmpl/default/en/value_builder/unimarc_field_100.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/value_builder/unimarc_field_100.tmpl
@@ -160,9 +160,16 @@
 
 			<!-- TMPL_IF name="f5m" -->
 				<option value="m"
+				SELECTED>fiction ou vulg adulte</option>
+			<!-- TMPL_ELSE -->
+				<option value="m">fiction ou vulg adulte</option>
+			<!-- /TMPL_IF -->
+			
+			<!-- TMPL_IF name="f5u" -->
+				<option value="u"
 				SELECTED>inconnu</option>
 			<!-- TMPL_ELSE -->
-				<option value="m">inconnu</option>
+				<option value="u">inconnu</option>
 			<!-- /TMPL_IF -->
 			</select>
 		</td>
@@ -214,9 +221,16 @@
 
 			<!-- TMPL_IF name="f6m" -->
 				<option value="m"
+				SELECTED>fiction ou vulg adulte</option>
+			<!-- TMPL_ELSE -->
+				<option value="m">fiction ou vulg adulte</option>
+			<!-- /TMPL_IF -->
+			
+			<!-- TMPL_IF name="f6u" -->
+				<option value="u"
 				SELECTED>inconnu</option>
 			<!-- TMPL_ELSE -->
-				<option value="m">inconnu</option>
+				<option value="u">inconnu</option>
 			<!-- /TMPL_IF -->
 			</select>
 		</td>
@@ -268,9 +282,16 @@
 
 			<!-- TMPL_IF name="f7m" -->
 				<option value="m"
+				SELECTED>fiction ou vulg adulte</option>
+			<!-- TMPL_ELSE -->
+				<option value="m">fiction ou vulg adulte</option>
+			<!-- /TMPL_IF -->
+			
+			<!-- TMPL_IF name="f7u" -->
+				<option value="u"
 				SELECTED>inconnu</option>
 			<!-- TMPL_ELSE -->
-				<option value="m">inconnu</option>
+				<option value="u">inconnu</option>
 			<!-- /TMPL_IF -->
 			</select>
 		</td>
