--- a/koha-tmpl/intranet-tmpl/default/en/acqui/suggestion-select.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/suggestion-select.tmpl
@@ -9,7 +9,7 @@
 			<th class="acquisition">&nbsp;</th>
 		</tr>
 		<tr>
-			<form>
+			<form action="/cgi-bin/koha/acqui/suggestion-select.pl" method="get">
 				<th class="acquisition">
 					<p>Filter on :
 					title: <input type="text" name="title" value="<!-- TMPL_VAR NAME="title"-->">
@@ -56,6 +56,5 @@
 			</tr>
 		<!-- /TMPL_LOOP -->
 	</table>
-	<form>
 </div>
 <!-- TMPL_INCLUDE NAME="acquisitions-bottom.inc" -->
