--- a/koha-tmpl/intranet-tmpl/default/en/bookshelves/addbookbybiblionumber.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bookshelves/addbookbybiblionumber.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE Name="popup-top.inc" -->
 <div id="mainbloc">
 <h2 class="catalogue">Select bookshelf</h2>
-<form>
+<form action="/cgi-bin/koha/bookshelves/addbookbybiblionumber.pl" method="get">
 	<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->">
 	<p><label>Title</label><!-- TMPL_VAR NAME="title" --></p>
 	<p><label>Author</label><!-- TMPL_VAR NAME="author" --></p>
