--- a/koha-tmpl/intranet-tmpl/default/en/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/catalogue/MARCdetail.tmpl
@@ -13,17 +13,17 @@
 		<a href="javascript:Addbiblio('duplicate')" class="button catalogue">
 			Duplicate
 		</a>
-		<a href="acqui.simple/additem.pl?biblionumber=<!-- TMPL_VAR name="biblionumber"-->" class="button catalogue">
+		<a href="acqui.simple/additem.pl?bibid=<!-- TMPL_VAR name="bibid"-->" class="button catalogue">
 			Edit item
 		</a>
 	
 		<a href="javascript:confirm_deletion()" class="button catalogue">
 			delete
 		</a>
-		<a href="detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			Complete
 		</a>
-		<a href="detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			Normal
 		</a>
 		<a href="ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
@@ -93,8 +93,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -121,8 +121,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -149,8 +149,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -177,8 +177,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -205,8 +205,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -233,8 +233,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -261,8 +261,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -289,8 +289,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -317,8 +317,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -345,8 +345,8 @@
 				<!-- /TMPL_IF -->
 			<!-- TMPL_LOOP NAME="subfield" -->
 				<p>
-					<label class="labelsubfield">
-					<!-- TMPL_VAR NAME="marc_subfield" -->
+					<label class="labelsubfield">&nbsp;
+					<!-- TMPL_UNLESS name="hide_marc" --><!-- TMPL_VAR NAME="marc_subfield" --><!-- /TMPL_UNLESS -->
 					<!-- TMPL_VAR NAME="marc_lib" --></label>
 					<!-- TMPL_VAR NAME="marc_value" -->
 					<!-- TMPL_IF name="link" -->
@@ -405,11 +405,11 @@ function Dopop(link) {
 }
 function Changefwk(FwkList) {
   var fwk = FwkList.options[FwkList.selectedIndex].value;
-  window.location = "MARCdetail.pl?biblionumber=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
+  window.location = "MARCdetail.pl?bib=<!--TMPL_VAR Name="biblionumber"-->&frameworkcode="+fwk;
 }
 function Addbiblio(op) {
-  var fwk = document.forms[0].Frameworks.options[document.forms[0].Frameworks.selectedIndex].value;
-  window.location = "acqui.simple/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
+  var fwk = document.forms['f'].Frameworks.options[document.forms['f'].Frameworks.selectedIndex].value;
+  window.location = "acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&frameworkcode="+fwk+"&op="+op; 
 }
 </script>
 </body>
