--- a/koha-tmpl/intranet-tmpl/default/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/moremember.tmpl
@@ -2,15 +2,10 @@
 
 <div id="mainbloc">
 	<h1><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h1>
-	<!-- TMPL_IF NAME="picture" -->
-		<img src="/intranet-tmpl/<!-- TMPL_VAR NAME="picture" -->">
-	<!-- /TMPL_IF --><br>
-	<a href="/cgi-bin/koha/members/member-picupload.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&name=<!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="othernames" --> <!-- TMPL_VAR NAME="surname" -->" class="button">Upload Picture</a><br>
 	<div class="bloc25">
 		<h2 class="members">Membership record</h2>
 		<!-- TMPL_VAR NAME="title" --> <!-- TMPL_VAR NAME="othernames" --> <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_IF NAME="IS_ADULT" -->(<!-- TMPL_VAR NAME="firstname" -->, <!-- TMPL_VAR NAME="initials" -->)<!-- /TMPL_IF -->
-		<p><label class="label100">Card number: </label><!-- TMPL_VAR NAME="cardnumber" --><br>	
-
+		<p><label class="label100">Card number: </label><!-- TMPL_VAR NAME="cardnumber" --><br>
 		<label class="label100">Postal Address: </label><!-- TMPL_VAR NAME="streetaddress" -->, <!-- TMPL_VAR NAME="zipcode" --> <!-- TMPL_VAR NAME="city" --><br>
 		<!-- TMPL_UNLESS name="I" --><label class="label100">Home Address: </label><!-- TMPL_VAR NAME="physstreet" -->, <!-- TMPL_VAR NAME="homezipcode" --> <!-- TMPL_VAR NAME="streetcity" --><br>
 		<label class="label100">Phone home: </label><!-- TMPL_VAR NAME="phone" --><br><!-- /TMPL_UNLESS -->
@@ -68,25 +63,7 @@
 			 <!-- TMPL_IF name="password" -->(password defined)<!-- TMPL_ELSE -->(no password)<!-- /TMPL_IF -->
 		</p>
 		<p>
-		<!-- TMPL_IF NAME="independantbranches"--> 
-			<!-- TMPL_IF NAME="samebranch"--> 
-				<!-- TMPL_IF NAME="I" -->
-					<a href="/cgi-bin/koha/members/imemberentry.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->" class="button">Modify</a>
-				<!-- TMPL_ELSE -->
-					<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->" class="button">Modify</a>
-				<!-- /TMPL_IF -->
-				<a href="javascript:confirm_deletion()" class="button">Delete</a>
-				<a href="/cgi-bin/koha/circ/circulation.pl?findborrower=<!-- TMPL_VAR NAME="cardnumber" -->" class="button">Issue books</a>
-				<a href="/cgi-bin/koha/members/member-password.pl?member=<!-- TMPL_VAR NAME="bornum" -->" class="button">Change Password</a>
-				</p>
-				<br/>
-				<p>
-				<!-- TMPL_IF NAME="IS_ADULT" -->
-					<a href="/cgi-bin/koha/members/jmemberentry.pl?type=Add&bornum=<!-- TMPL_VAR NAME="borrowernumber" -->" class="button">Add Child</a>
-				<!-- /TMPL_IF -->
-				<a href="/cgi-bin/koha/members/member-flags.pl?member=<!-- TMPL_VAR NAME="bornum" -->" class="button">Modify User Flags</a>
-			<!-- /TMPL_IF -->
-		<!-- TMPL_ELSE --> 
+		<!-- TMPL_UNLESS NAME="unvalidlibrarian"--> 
 			<!-- TMPL_IF NAME="I" -->
 				<a href="/cgi-bin/koha/members/imemberentry.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->" class="button">Modify</a>
 			<!-- TMPL_ELSE -->
@@ -102,7 +79,7 @@
 				<a href="/cgi-bin/koha/members/jmemberentry.pl?type=Add&bornum=<!-- TMPL_VAR NAME="borrowernumber" -->" class="button">Add Child</a>
 			<!-- /TMPL_IF -->
 			<a href="/cgi-bin/koha/members/member-flags.pl?member=<!-- TMPL_VAR NAME="bornum" -->" class="button">Modify User Flags</a>
-		<!-- /TMPL_IF -->
+		<!-- /TMPL_UNLESS -->
 		<a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;print=page" class="button">Print Page</a> <a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;print=slip" class="button">Print Slip</a>
 		</p>
 	</div>
@@ -124,23 +101,14 @@
 			No debts
 		</TMPL_IF>
 		<p>
-		<!-- TMPL_IF NAME="independantbranches"--> 
-			<!-- TMPL_IF NAME="samebranch"--> 
-				<a class="button" href="/cgi-bin/koha/boraccount.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->">
-					View Account
-				</a>
-				<a class="button" href="/cgi-bin/koha/pay.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->">
-					Pay Fines
-				</a>
-			<!-- /TMPL_IF --> 
-		<!-- TMPL_ELSE --> 
+		<!-- TMPL_UNLESS NAME="unvalidlibrarian"--> 
 			<a class="button" href="/cgi-bin/koha/boraccount.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->">
 				View Account
 			</a>
 			<a class="button" href="/cgi-bin/koha/pay.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->">
 				Pay Fines
 			</a>
-		<!-- /TMPL_IF --> 
+		<!-- /TMPL_UNLESS -->
 		</p>
 	</div>
 	<div class="bloc25">
@@ -175,18 +143,11 @@
 					<!-- /TMPL_LOOP -->
 					<tr>
 						<td colspan="5" align="right">
-						<!-- TMPL_IF NAME="independantbranches"--> 
-							<!-- TMPL_IF NAME="samebranch"--> 
-								<!-- TMPL_IF NAME="reserveloop" -->
-									<input type="submit" name="submit" value="Update" class="button">
-								<!-- /TMPL_IF -->
-							<!-- /TMPL_IF --> 
-						<!-- TMPL_ELSE --> 
+						<!-- TMPL_UNLESS NAME="unvalidlibrarian"--> 
 							<!-- TMPL_IF NAME="reserveloop" -->
 								<input type="submit" name="submit" value="Update" class="button">
 							<!-- /TMPL_IF -->
-						<!-- /TMPL_IF --> 
-
+						<!-- /TMPL_UNLESS -->
 						</td>
 					</tr>
 				</table>
@@ -212,13 +173,9 @@
 				<th>Due</th>
 				<th>Itemtype</th>
 				<th>Charge</th>
-				<!-- TMPL_IF NAME="independantbranches"--> 
-					<!-- TMPL_IF NAME="samebranch"--> 
-						<th>Renew</th>
-					<!-- /TMPL_IF--> 
-				<!-- TMPL_ELSE --> 
+				<!-- TMPL_UNLESS Name ="unvalidlibrarian"--> 
 					<th>Renew</th>
-				<!-- /TMPL_IF--> 
+				<!-- /TMPL_UNLESS -->
 			</tr>
 
 			<!-- TMPL_LOOP NAME="issueloop" -->
@@ -232,37 +189,22 @@
 				<td><!-- TMPL_IF NAME="red" --><p class="problem"><!-- TMPL_ELSE --> <p><!-- /TMPL_IF --><!-- TMPL_VAR NAME="date_due" --></p></td>
 				<td><!-- TMPL_VAR NAME="itemtype" --></td>
 				<td><!-- TMPL_VAR NAME="charge" --></td>
-				<!-- TMPL_IF NAME="independantbranches"--> 
-					<!-- TMPL_IF NAME="samebranch"--> 
-						<td>
+				<!-- TMPL_UNLESS Name ="unvalidlibrarian"--> 
+					<td>
 						<!-- TMPL_IF NAME="norenew" -->
 							<a href="/cgi-bin/koha/request.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->">On Request - no renewals</a>
 						<!-- TMPL_ELSE -->
 							<input type="radio" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="y">Y
 							<input type="radio" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="n">N
 						<!-- /TMPL_IF -->
-						</td>
-					<!-- /TMPL_IF--> 
-				<!-- TMPL_ELSE --> 
-					<td>
-					<!-- TMPL_IF NAME="norenew" -->
-						<a href="/cgi-bin/koha/request.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->">On Request - no renewals</a>
-					<!-- TMPL_ELSE -->
-						<input type="radio" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="y">Y
-						<input type="radio" name="renew_item_<!-- TMPL_VAR NAME="itemnumber" -->" value="n">N
-					<!-- /TMPL_IF -->
 					</td>
-				<!-- /TMPL_IF -->
+				<!-- /TMPL_UNLESS --> 
 			</tr>
 			<!-- /TMPL_LOOP -->
 			</table>
-			<!-- TMPL_IF NAME="independantbranches"--> 
-				<!-- TMPL_IF NAME="samebranch"--> 
-					<input type="submit" class="button" value="Renew Items">
-				<!-- /TMPL_IF--> 
-			<!-- TMPL_ELSE --> 
+			<!-- TMPL_UNLESS Name ="unvalidlibrarian"--> 
 				<input type="submit" class="button" value="Renew Items">
-			<!-- /TMPL_IF -->
+			<!-- /TMPL_UNLESS --> 
 		</form>
 		<!-- TMPL_ELSE -->
 			None
