--- a/koha-tmpl/intranet-tmpl/default/en/search.marc/search.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/search.marc/search.tmpl
@@ -30,9 +30,11 @@
 			<input type="hidden" name="excluding" value="">
 			<input type="hidden" name="operator" value="contains">
 			<input type="text" name="value" id="title" onchange="sql_update()" size="35">
-			<a href="javascript:Dopop('dictionary.pl?marclist=biblio.title&amp;type=intranet&amp;index=1',1)" class="button catalogue">
-				...
-			</a>
+			<!-- TMPL_UNLESS Name="Disable_Dictionary" -->
+				<a href="javascript:Dopop('dictionary.pl?marclist=biblio.title&amp;type=intranet&amp;index=1',1)" class="button catalogue">
+					...
+				</a>
+			<!-- /TMPL_UNLESS -->
 		</p>
 		<p>
 			<label for="author">Author</label> <input type="hidden" name="marclist" value="biblio.author">
@@ -40,9 +42,11 @@
 			<input type="hidden" name="excluding" value="">
 			<input type="hidden" name="operator" value="contains">
 			<input type="text" name="value" id="author" onchange="sql_update()" size="35">
-			<a href="javascript:Dopop('dictionary.pl?marclist=biblio.author&amp;type=intranet&amp;index=2',2)" class="button catalogue">
-				...
-			</a>
+			<!-- TMPL_UNLESS Name="Disable_Dictionary" -->
+				<a href="javascript:Dopop('dictionary.pl?marclist=biblio.author&amp;type=intranet&amp;index=2',2)" class="button catalogue">
+					...
+				</a>
+			<!-- /TMPL_UNLESS -->
 		</p>
 		<p>
 			<label for="subject">Subject</label>
@@ -51,9 +55,11 @@
 			<input type="hidden" name="excluding" value="">
 			<input type="hidden" name="operator" value="contains">  
 			<input type="text" name="value" id="subject" onchange="sql_update()" size="35">
-			<a href="javascript:Dopop('dictionary.pl?marclist=bibliosubject.subject&amp;type=intranet&amp;index=3',3)" class="button catalogue">
-				...
-			</a>
+			<!-- TMPL_UNLESS Name="Disable_Dictionary" -->
+				<a href="javascript:Dopop('dictionary.pl?marclist=bibliosubject.subject&amp;type=intranet&amp;index=3',3)" class="button catalogue">
+					...
+				</a>
+			<!-- /TMPL_UNLESS -->
 		</p>
 		<p>
 			<label for="itemtype">Item Type</label>
@@ -186,12 +192,12 @@ document.f.sql.value="";
 
 function AddStatement() {
 
-	document.forms[0].op.value="AddStatement";
+	document.forms['f'].op.value="AddStatement";
 	document.f.submit();
 }
 
 function Dopop(link,i) {
-	var searchstring=document.forms[0].value[i].value;
+	var searchstring=document.forms['f'].value[i].value;
 	newin=window.open(link+'&amp;search='+searchstring,"popup",'width=700,height=550,toolbar=false,scrollbars=yes');
 }
 
