--- a/koha-tmpl/intranet-tmpl/default/en/value_builder/unimarc_field_210c.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/value_builder/unimarc_field_210c.tmpl
@@ -32,7 +32,7 @@
 		<div id="resultnumber">
 			<p>
 				<!-- TMPL_IF name="displayprev" -->
-					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromprev" -->&amp;&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+					<a href="plugin_launcher.pl?plugin_name=unimarc_field_210c.pl&amp;startfrom=<!-- TMPL_VAR NAME="startfromprev" -->&amp;&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
 						<img src="/intranet-tmpl/default/images/numbers/prev.gif" border="0">
 					</a>
 				<!-- /TMPL_IF -->
@@ -40,12 +40,12 @@
 					<!-- TMPL_IF name="highlight" -->
 						<img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->-highlight.gif">
 					<!-- TMPL_ELSE -->
-						<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+						<a href="plugin_launcher.pl?plugin_name=unimarc_field_210c.pl&amp;startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
 							<img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->.gif" border="0"></a>
 					<!-- /TMPL_IF -->
 				<!-- /TMPL_LOOP -->
 				<!-- TMPL_IF name="displaynext" -->
-					<a href="auth_finder.pl?startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
+					<a href="plugin_launcher.pl?plugin_name=unimarc_field_210c.pl&amp;startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
 						<img src="/intranet-tmpl/default/images/numbers/next.gif" border="0"></a>
 				<!-- /TMPL_IF -->
 			</p>
