new features for serial module : - the last 5 issues are now shown, and their status can be changed (but not reverted to "waited", as there can be only one "waited") - the library can create a "distribution list". this paper contains a list of borrowers (selected from the borrower list, or manually entered), and print it for a given issue. once printed, the sheet can be put on the issue and distributed to every reader on the list (one by one).

--- a/koha-tmpl/intranet-tmpl/default/en/bull/statecollection.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bull/statecollection.tmpl
@@ -73,6 +73,9 @@
 			<td>
 				<input type="text" name="notes" value="<!-- TMPL_VAR name="notes" -->" size=20 maxlength=255>
 			</td>
+			<td>
+				<a href="javascript:PrintList(<!-- TMPL_VAR name="subscriptionid" -->,'<!-- TMPL_VAR name="serialseq" -->')" class="button bull">print</a>
+			</td>
 		</tr>
 	<!-- /TMPL_LOOP -->
 	<!-- TMPL_UNLESS name="hassubscriptionexpired" -->
@@ -128,9 +131,12 @@
 </table>
 <script language="JavaScript" type="text/javascript">
 
-function popup()
-{
+function popup() {
 	 window.open("subscription-renew.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid">","subscription renewal",'width=700,height=400,toolbar=false,scrollbars=yes');
+}
+
+function PrintList(subscriptionid,serialseq) {
+	window.open("printlist.pl?subscriptionid="+subscriptionid+"&serialseq="+serialseq);
 }
 </script>
 
