--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/acquire.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/acquire.tmpl
@@ -1,5 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Receipt Summary for : <!-- TMPL_VAR NAME="name" --> <!-- TMPL_IF NAME="invoice" -->Invoice, <!-- TMPL_VAR NAME="invoice" --><!-- /TMPL_IF --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 
 <h1>Receipt Summary for : <!-- TMPL_VAR NAME="name" --> <!-- TMPL_IF NAME="invoice" -->Invoice, <!-- TMPL_VAR NAME="invoice" --><!-- /TMPL_IF --></h1>
@@ -26,106 +28,45 @@
 	<form action="/cgi-bin/koha/acqui/finishreceive.pl" method="post">
 	<h1><!-- TMPL_VAR NAME="ordernumber" --> - Receive Order</h1>
 	<ul><li>Shopping Basket For: <!-- TMPL_VAR NAME="name" --></li>
-		<li>Order placed: <!-- TMPL_VAR NAME="date" --></li>
+		<li>Order placed on: <!-- TMPL_VAR NAME="date" --></li>
 	</ul>
 
-	<table>
-	<caption>Catalogue Details</caption>
-		<tr>
-			<td>Title *</td>
-			<td><input type="text" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Author</td>
-			<td><input type="text" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Copyright Date</td>
-			<td><input type="text" size="20" name="copyright" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Format</td>
-			<td><!-- TMPL_VAR NAME="CGIitemtype" --></td>
-		</tr>
-		<tr>
-			<td>ISBN</td>
-			<td><input type="text" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /></td>
-		</tr>
-		<tr>
-			<td>Series</td>
-			<td><input type="text" size="20" name="Series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /></td>
-		</tr>
-		<tr>
-			<td>Branch</td>
-			<td><!-- TMPL_VAR NAME="CGIbranch" --></td>
-		</tr>
-		<tr>
-			<td>Item Barcode *</td>
-			<td><input type="text" size="20" name="barcode" value="<!-- TMPL_VAR NAME="barcode" -->" /></td>
-		</tr>
-		<tr>
-			<td>Volume Info (for serials) *</td>
-			<td><input type="text" size="20" name="volinf" /></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
-				<input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordernumber" -->" />
-				<input type="hidden" name="biblioitemnum" value="<!-- TMPL_VAR NAME="biblioitemnumber" -->" />
-				<input type="hidden" name="id" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
-				<input type="hidden" name="freight" value="<!-- TMPL_VAR NAME="freight" -->" />
-				<input type="hidden" name="gst" "value"="<!-- TMPL_VAR NAME="gst" -->" />
-				<!-- TMPL_IF name="catview" -->
-					<input type="submit"  name="submit" value="Save" />
-				<!-- TMPL_ELSE -->
-					<a href="/cgi-bin/koha/acqui/newbiblio.pl?ordnum=<!-- TMPL_VAR NAME="ordernumber" -->&amp;id=<!-- TMPL_VAR NAME="booksellerid" -->">Edit</a>
-				<!-- /TMPL_IF -->
-			</td>
-		</tr>
-	</table>
-	<table>
-	<caption>Accounting Details</caption>
-		<tr>
-			<td>Bookfund *</td>
-			<td><!-- TMPL_VAR NAME="CGIbookfund" -->
-		</tr>
-		<tr>
-			<td>Quantity Ordered</td>
-			<td><input type="text" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Quantity Received *</td>
-			<td><input type="text" size="20" name="quantityrec" value="<!-- TMPL_VAR NAME="quantityreceived" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Replacement Cost</td>
-			<td><input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
-		</tr>
-		<tr>
-			<td>Budgeted Cost </td>
-			<td><input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" /></td>
-		</tr>
-		<tr>
-			<td>Actual Cost *</td>
-			<td><input type="text" size="20" name="cost" value="<!-- TMPL_IF name="unitprice"--><!-- TMPL_VAR NAME="unitprice" --><!-- TMPL_ELSE --><!-- TMPL_VAR name="rrp" --><!-- /TMPL_IF -->" /></td>
-		</tr>
-		<tr>
-			<td>Invoice Number</td>
-			<td>
-				<!-- TMPL_VAR NAME="invoice" -->
-				<input type="hidden" name="invoice" value="<!-- TMPL_VAR NAME="invoice" -->" />
-			</td>
-		</tr>
-		<tr>
-			<td>Notes</td>
-			<td><input type="text" size="20" name="notes" value="<!-- TMPL_VAR NAME="notes" -->" /></td>
-		</tr>
-	</table>
+	<h2>Catalogue Details</h2>
+	<p><label>Title *</label><input type="text" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" /></p>
+	<p><label>Author</label><input type="text" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" /></p>
+	<p><label>Copyright Date</label><input type="text" size="20" name="copyright" value="<!-- TMPL_VAR NAME="copyrightdate" -->" /></p>
+	<p><label>Format</label><!-- TMPL_VAR NAME="CGIitemtype" --></p>
+	<p><label>ISBN</label><input type="text" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /></p>
+	<p><label>Series</label><input type="text" size="20" name="Series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /></p>
+	<p><label>Branch</label>
+			<select name="branch">
+			<!-- TMPL_LOOP name="branchloop" -->
+				<option value="<!-- TMPL_VAR name="value" -->"><!-- TMPL_VAR name="branchname" --></option>
+			<!-- /TMPL_LOOP -->
+			</select>
+	</p>
+	<p><label>Item Barcode *</label><input type="text" size="20" name="barcode" value="<!-- TMPL_VAR NAME="barcode" -->" /></p>
+	<p><label>Volume Info (for serials) *</label><input type="text" size="20" name="volinf" /></p>
+	<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
+	<input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordernumber" -->" />
+	<input type="hidden" name="biblioitemnum" value="<!-- TMPL_VAR NAME="biblioitemnumber" -->" />
+	<input type="hidden" name="id" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
+	<input type="hidden" name="freight" value="<!-- TMPL_VAR NAME="freight" -->" />
+	<input type="hidden" name="gst" value="<!-- TMPL_VAR NAME="gst" -->" />
+	<!-- TMPL_IF name="catview" -->
+		<input type="submit"  name="submit" value="Save" />
+	<!-- TMPL_ELSE -->
+		<a href="/cgi-bin/koha/acqui/newbiblio.pl?ordnum=<!-- TMPL_VAR NAME="ordernumber" -->&amp;id=<!-- TMPL_VAR NAME="booksellerid" -->">Edit</a>
+	<!-- /TMPL_IF -->
+	<h2>Accounting Details</h2>
+		<p><label>Bookfund *</label><!-- TMPL_VAR NAME="CGIbookfund" --></p>
+		<p><label>Quantity Ordered</label><input type="text" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" /></p>
+		<p><label>Quantity Received *</label><input type="text" size="20" name="quantityrec" value="<!-- TMPL_VAR NAME="quantityreceived" -->" /></p>
+		<p><label>Replacement Cost</label><input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" /></p>
+		<p><label>Budgeted Cost </label><input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" /></p>
+		<p><label>Actual Cost *</label><input type="text" size="20" name="cost" value="<!-- TMPL_IF name="unitprice"--><!-- TMPL_VAR NAME="unitprice" --><!-- TMPL_ELSE --><!-- TMPL_VAR name="rrp" --><!-- /TMPL_IF -->" /></p>
+		<p><label>Invoice Number</label><!-- TMPL_VAR NAME="invoice" --><input type="hidden" name="invoice" value="<!-- TMPL_VAR NAME="invoice" -->" /></p>
+		<p><label>Notes</label><input type="text" size="20" name="notes" value="<!-- TMPL_VAR NAME="notes" -->" /></p>
 	</form>
 
 <!-- TMPL_ELSE -->
