--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
@@ -1,25 +1,35 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- <!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket (<!-- TMPL_VAR NAME="basketno" -->) for <!-- TMPL_VAR NAME="name" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 	<h1><!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket <!-- TMPL_VAR NAME="basketno" --> for <a href="supplier.pl?id=<!-- TMPL_VAR NAME="booksellerid" -->"><!-- TMPL_VAR NAME="name" --></a></h1><br />
 	<!-- TMPL_UNLESS name="closedate" -->
 		
+			<h2>Basket Details</h2>
 			<table>
-			<caption>Basket Details</caption>
 			<tr><th>Basket Number:</th><td><!-- TMPL_VAR NAME="basketno" --></td></tr>
 			<tr><th>Managed By:</th><td><!-- TMPL_VAR NAME="authorisedbyname" --></td></tr>
 			<tr><th>Open On:</th><td><!-- TMPL_VAR NAME="creationdate" --></td></tr>
 			<tr><th>For:</th><td>Supplier Id <!-- TMPL_VAR NAME="booksellerid" --></td></tr>
 			<tr><th>Invoice Number:</th><td><!-- TMPL_VAR NAME="booksellerinvoicenumber" --></td></tr>
 			<!-- TMPL_IF name="closedate" --><tr><th>Closed On:</th><td> <!-- TMPL_VAR name="closedate" --></td></tr><!-- /TMPL_IF -->
-			</table><!-- TMPL_UNLESS name="closedate" --><form action="/cgi-bin/koha/acqui/order.pl" method="get"><input type="hidden" name="op" value="close" /><input type="hidden" name="basket" value="<!-- TMPL_VAR NAME="basketno" -->" /><input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" /><input type="submit" value="Close this Basket" /></form><!-- /TMPL_UNLESS -->
+			</table>
+			<!-- TMPL_UNLESS name="closedate" -->
+			<form action="/cgi-bin/koha/acqui/order.pl" method="get">
+				<input type="hidden" name="op" value="close" />
+				<input type="hidden" name="basket" value="<!-- TMPL_VAR NAME="basketno" -->" />
+				<input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" />
+				<input type="submit" value="Close this Basket" />
+			</form>
+			<!-- /TMPL_UNLESS -->
 		
 	<!-- /TMPL_UNLESS -->
 	
 	
+	<h2>Order Details</h2>
 	<!-- TMPL_IF name="books_loop" -->
 		<table>
-			<caption>Order Details</caption>
 			<tr>
 				<th scope="col">Order</th>
 				<th scope="col"><a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->&amp;order=biblioitems.publishercode">Publisher</a></th>
@@ -65,7 +75,13 @@
 					<!-- TMPL_IF name="active" -->
 					<!-- TMPL_UNLESS name="closedate" -->
 					<td>
-							<form action="addorder.pl" method="get"><input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordernumber" -->" /><input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" /><input type="hidden" name="quantity" value="0" /><input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="submit" class="delete" value="Delete" /></form>
+							<form action="addorder.pl" method="get">
+								<input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordernumber" -->" />
+								<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
+								<input type="hidden" name="quantity" value="0" />
+								<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
+								<input type="submit" class="delete" value="Delete" />
+							</form>
 						</td>
 					<!-- /TMPL_UNLESS -->
 						<!-- /TMPL_IF -->
@@ -74,7 +90,9 @@
 			
 			<tr>
 				<td colspan="2" rowspan="3">
-<input type="hidden" name="number" value="<!-- TMPL_VAR NAME="count" -->" /><input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />	</td>
+					<input type="hidden" name="number" value="<!-- TMPL_VAR NAME="count" -->" />
+					<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
+				</td>
 				<th>SubTotal</th>
 				<th><!-- TMPL_VAR NAME="sub_total_est" --></th>
 				<th><!-- TMPL_VAR NAME="sub_total" --></td>
@@ -97,7 +115,6 @@
 		</table>
 	<!-- TMPL_ELSE -->
 		<table>
-			<caption>Order Details</caption>
 			<tr><td>Basket empty</td></tr>
 		</table>
 	<!-- /TMPL_IF -->
@@ -106,9 +123,10 @@
 	
 		<h2>Add To Order</h2>
 		<form action="/cgi-bin/koha/acqui/newbasket2.pl" method="post">
-			<input type="hidden" name="booksellerid" value="<!-- TMPL_VAR NAME="booksellerid" -->">
-			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->">
-			<ul><li>From an existing record: <input type="text"  size="25"   name="search"><input type="submit" value="Search"></li>
+			<input type="hidden" name="booksellerid" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
+			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
+			<ul><li>From an existing record: <input type="text"  size="25"   name="search" />
+			<input type="submit" value="Search" /></li>
 			<li><a href="/cgi-bin/koha/acqui/suggestion-select.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">From a Suggestion</a></li>
 			<li><a href="/cgi-bin/koha/acqui/newbiblio.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">New Record</a></li>
 			</ul>
