--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
@@ -1,8 +1,12 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Acquisitions: Order Search<!-- TMPL_INCLUDE NAME="doc-head-close-calendar.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Search order
+<!-- TMPL_INCLUDE NAME="doc-head-close-calendar.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
-	<h1>Order search</h3>
-	<form action="/cgi-bin/koha/acqui/histsearch.pl" method="post"><table>
+	<h1>Order search</h1>
+	<form action="/cgi-bin/koha/acqui/histsearch.pl" method="post">
+	<table>
 		<tr>
 			<th>&nbsp;</th>
 			<th>Title</th>
@@ -20,8 +24,8 @@
 				<th><input type="text" name="title" value="<!-- TMPL_VAR name="title"-->" /></th>
 				<th><input type="text" name="author" value="<!-- TMPL_VAR name="author" -->" /></th>
 				<th><input type="text" name="name" value="<!-- TMPL_VAR name="name" -->" /></th>
-				<th>					From <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
-					<input type="text" readonly="readonly" size="10" id="from" name="fromplacedon" value="<!-- TMPL_VAR name="from_placed_on" -->">
+				<th>From <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" alt="calendar" />
+					<input type="text" readonly="readonly" size="10" id="from" name="fromplacedon" value="<!-- TMPL_VAR name="from_placed_on" -->" />
 					<script language="JavaScript" type="text/javascript">
 						function validate1(date) {
 							var day = date.getDate();
@@ -48,7 +52,7 @@
 							}
 						);
 					</script>
-					To <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" border="0" />
+					To <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="calendar" />
 					<input readonly="readonly" size="10" id="to" name="toplacedon" value="<!-- TMPL_VAR name="to_placed_on" -->" type="text" />
 					<script type="text/javascript">
 						function validate2(date) {
