--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/newbasket2.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/newbasket2.tmpl
@@ -1,26 +1,25 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Shopping Basket For: <!-- TMPL_VAR name="bookselname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
- <h1>Shopping Basket For: <!-- TMPL_VAR name="bookselname" --></h1>
+<h1>Shopping Basket For: <!-- TMPL_VAR name="bookselname" --></h1>
 
-<!-- TMPL_IF name ="testdonation" -->
 	<a href="newbiblio.pl?id=<!-- TMPL_VAR name="id" -->&amp;basket=<!-- TMPL_VAR name="basket" -->&amp;sub=<!-- TMPL_VAR name="parsub" -->">Add New Biblio</a>
-<!-- TMPL_ELSE -->
-	<a href="newdonation.pl?id=<!-- TMPL_VAR name="id" -->&amp;basket=<!-- TMPL_VAR name="basket" -->&amp;sub=<!-- TMPL_VAR name="parsub" -->">Add New Biblio</a>
-<!-- /TMPL_IF --> | <a href="basket.pl?basket=<!-- TMPL_VAR name="basket" -->">View Basket</a> | 
+ | <a href="basket.pl?basket=<!-- TMPL_VAR name="basket" -->">View Basket</a> | 
 <form class="inline" action="/cgi-bin/koha/acqui/newbasket2.pl">
 <input type="hidden" name="id" value="<!-- TMPL_VAR name="id" -->" />
 <input type="hidden" name="basket" value="<!-- TMPL_VAR name="basket" -->" />
 New Search: <input type="text"  size="25" name="search" /></form>
 
 
-<h3>You searched for 
+<h2>You searched for 
 <!-- TMPL_LOOP name="loopsearch" -->
 	<!-- TMPL_VAR name="key" --> <!-- TMPL_VAR name="value" -->
 <!-- /TMPL_LOOP -->
 
-</h3>
-Results <!-- TMPL_VAR name="dispnum" --> to <!-- TMPL_VAR name="offset2" --> of <!-- TMPL_VAR name="count" --> results displayed.
+</h2>
+<p>Results <!-- TMPL_VAR name="dispnum" --> to <!-- TMPL_VAR name="offset2" --> of <!-- TMPL_VAR name="count" --> results displayed.</p>
 
 <table>
 	<tr>
@@ -34,15 +33,9 @@ Results <!-- TMPL_VAR name="dispnum" --> to <!-- TMPL_VAR name="offset2" --> of 
 <!-- TMPL_LOOP name="loopresult" -->
 	<tr>
 		<td>
-			<!-- TMPL_IF name="testdonation" -->
-				<a href="/cgi-bin/koha/acqui/newbiblio.pl?sub=<!-- TMPL_VAR name="sub" -->&amp;author=<!-- TMPL_VAR name="author2" -->&amp;copyright=<!-- TMPL_VAR name="copyright" -->&amp;id=<!-- TMPL_VAR name="id" -->&amp;basket=<!-- TMPL_VAR name="basket" -->&amp;biblio=<!-- TMPL_VAR name="biblionumber" -->&amp;title=<!-- TMPL_VAR name="title2" -->">
+			<a href="/cgi-bin/koha/acqui/newbiblio.pl?sub=<!-- TMPL_VAR name="sub" -->&amp;author=<!-- TMPL_VAR name="author2" -->&amp;copyright=<!-- TMPL_VAR name="copyright" -->&amp;id=<!-- TMPL_VAR name="id" -->&amp;basket=<!-- TMPL_VAR name="basket" -->&amp;biblio=<!-- TMPL_VAR name="biblionumber" -->&amp;title=<!-- TMPL_VAR name="title2" -->">
 				<!-- TMPL_VAR name="title" -->
-				</a>
-			<!-- TMPL_ELSE -->
-				<a href="/cgi-bin/koha/acqui/newdonation.pl?author=<!-- TMPL_VAR name="author2" -->&amp;copyright=<!-- TMPL_VAR name="copyright" -->&amp;id=<!-- TMPL_VAR name="id" -->&amp;basket=<!-- TMPL_VAR name="basket" -->&amp;biblio=<!-- TMPL_VAR name="biblionumber" -->&amp;title=<!-- TMPL_VAR name="title2" -->">
-				<!-- TMPL_VAR name="title" -->
-				</a>
-			<!-- /TMPL_IF -->
+			</a>
 		</td>
 		<td>
 			<a href="/cgi-bin/koha/search.pl?author=<!-- TMPL_VAR name="word" -->&amp;type=<!-- TMPL_VAR name="type" -->">
